--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/index.css">
-  <script type="text/javascript" src="./js/index.js" defer></script>
+  <script src="./js/index.js" defer />
   <title>MarLieDev | Article preview component</title>
 </head>
 
