optimized script import

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-EN">
 
 <head>
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/index.css">
-  <script src="./js/index.js" defer />
+  <script src="./js/index.js" defer></script>
   <title>MarLieDev | Article preview component</title>
 </head>
 
